--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
+  "proxy": "http://localhost:8000",
   "keywords": [],
   "author": "",
   "license": "ISC",
