--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "proxy": "http://82.12.159.76:8000",
+  "proxy": "http://cluster0.fnap6.mongodb.net:27017",
   "keywords": [],
   "author": "",
   "license": "ISC",
